Fix #60 support standalone java files
- Standalone Java files are linked to a default Java project providing a default classpath allowing for content assist for Base JDK classes
- the Java files must exist and be referenced with a file:// uri

Signed-off-by: Fred Bricon <fbricon@gmail.com>